# prefect-config-public

rbr-prefect/: CLAUDE.md  README.md  pyproject.toml  requirements.txt  test.py
rbr-prefect/.claude/: settings.local.json
rbr-prefect/.instructions/: PLAN.md  REQUIREMENTS.md  TESTING_EXTENSIVE.md  TESTING_SIMPLE.md
rbr-prefect/rbr_prefect/: __init__.py  constants.py  cron.py  deploy.py
rbr-prefect/rbr_prefect/_cli/: __init__.py  messages.py  ui.py
rbr-prefect/rbr_prefect/blocks/: __init__.py  basic_auth_block.py  db_credentials_block.py  generic_credentials_block.py  mongodb_credentials_block.py  msal_credentials_block.py
rbr-prefect/tests/: conftest.py  test_deploy_simple.py
rbr-prefect/tests/e2e/: README.md  deploy_teste_flow.py
rbr-prefect/tests/flows/: requirements.txt  teste_flow.py
rbr-prefect/tests/simple-flow-source-gh/: deploy_flow_country.py  deploy_flow_country_rbr.py  flow_country.py  requirements.txt
templates/: profiles.template.toml
