[project]
name = "rbr-prefect"
version = "0.2.1"
description = "Utilitário de deploy de flows Prefect para a RBR Asset Management."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "prefect",
    "prefect-github",
    "cronexpressions",
]

[project.urls]
Repository = "https://github.com/RBR-Asset-Management/rbr-prefect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.2.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rbr_prefect/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
]
