[project]
name = "rbr-prefect"
version = "0.3.14"
description = "Utilitário de deploy de flows Prefect para a RBR Asset Management."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "prefect",
    "prefect-github",
    "cron-builder",
    "requirements-detector>=1.5.0",
    "cron-descriptor>=2.0.6",
]

[project.urls]
Repository = "https://github.com/RBR-Asset-Management/rbr-prefect"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.3.14"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rbr_prefect/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["e2e"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "bump2version>=1.0.1",
    "bizdays",
]
